@@ -1,10 +1,8 @@
 package dte.modernjavaplugin;
 
-import static java.util.stream.Collectors.toList;
 import static org.bukkit.ChatColor.RED;
 
 import java.util.Arrays;
-import java.util.List;
 import java.util.Objects;
 
 import org.apache.commons.lang.exception.ExceptionUtils;
@@ -13,7 +11,12 @@ import org.bukkit.event.Listener;
 import org.bukkit.plugin.java.JavaPlugin;
 import org.reflections.Reflections;
 
-import dte.modernjavaplugin.utils.ClassUtils;
+import dte.modernjavaplugin.serviceprovider.ServiceProvider;
+import dte.modernjavaplugin.serviceprovider.VaultHook;
+import net.milkbowl.vault.chat.Chat;
+import net.milkbowl.vault.economy.Economy;
+import net.milkbowl.vault.permission.Permission;
+
 
 public class ModernJavaPlugin extends JavaPlugin
 {
@@ -31,38 +34,37 @@ public class ModernJavaPlugin extends JavaPlugin
 	}
 	
 	/**
-	 * Auto-detects and registers all subclasses of {@code Listener} in the package identified by the provided {@code package name}.
+	 * Registers all {@code Listener} classes that are located inside the provided {@code package}. 
+	 * This method treats only classes that have an empty constructor.
 	 * 
 	 * @param listenersPackage The name of the listeners' package.
 	 */
-	public void registerListeners(String listenersPackage) 
+	public void registerListenersAt(String listenersPackage) 
 	{
-		List<Listener> foundListeners = new Reflections(listenersPackage).getSubTypesOf(Listener.class).stream()
+		Listener[] foundListeners = new Reflections(listenersPackage).getSubTypesOf(Listener.class).stream()
 				.map(classz -> 
 				{
-					return ClassUtils.getNoArgumentConstructor(classz)
-							.map(constructor -> 
-							{
-								try
-								{
-									return constructor.newInstance();
-								}
-								catch(Exception exception)
-								{
-									logToConsole(RED + String.format("Could not auto-register listener %s due to %s", classz.getName(), ExceptionUtils.getCause(exception)));
-									return null;
-								}
-							})
-							.orElse(null);
+					try
+					{
+						//create an instance from the empty constructor
+						return classz.getConstructor().newInstance();
+					}
+					catch(NoSuchMethodException exception) 
+					{
+						//skip the class if it doesn't have an empty constructor
+						return null;
+					}
+					catch(Exception exception)
+					{
+						//log any other exceptions
+						logError(String.format("Couldn't register listener '%s' due to %s", classz.getSimpleName(), ExceptionUtils.getRootCauseMessage(exception)));
+						return null;
+					}
 				})
 				.filter(Objects::nonNull)
-				.collect(toList());
-		
-		if(!foundListeners.isEmpty()) 
-		{
-			logToConsole(String.format("Auto-registering %d listeners...", foundListeners.size()));
-			registerListeners(foundListeners.toArray(new Listener[0]));
-		}
+				.toArray(Listener[]::new);
+
+		registerListeners(foundListeners);
 	}
 
 	/**
@@ -70,19 +72,60 @@ public class ModernJavaPlugin extends JavaPlugin
 	 * 
 	 * @param message The message to send.
 	 */
-	public void logToConsole(String message) 
+	public void log(String message) 
 	{
 		Bukkit.getConsoleSender().sendMessage(String.format("[%s] %s", this.pluginName, message));
 	}
-
+	
 	/**
-	 * Logs to console the provided {@code error messages} and then shuts the plugin down.
+	 * A variant of {@link #logToConsole(String)} that logs <b>red</b> messages to the console.
 	 * 
-	 * @param messages The error messages to send.
+	 * @param message The error message to log.
 	 */
-	public void disableWithError(String... messages) 
+	public void logError(String message) 
 	{
-		Arrays.stream(messages).forEach(this::logToConsole);
+		log(RED + message);
+	}
+	
+	/**
+	 * Shortcut method to disable the plugin due to an error, and the provided {@code messages} will be logged to the console in <b>red</b>.
+	 * 
+	 * @param errorMessages The messages to send to the console in red.
+	 */
+	public void disableBecause(String... errorMessages)
+	{
+		Arrays.stream(errorMessages).forEach(this::logError);
+		
 		Bukkit.getPluginManager().disablePlugin(this);
+	}
+	
+	/**
+	 * Shortcut method that imitates a natural way of retrieving the Economy Manager of the server.
+	 * 
+	 * @return What {@link VaultHook#loadEconomy()} returns.
+	 */
+	public ServiceProvider<Economy> loadEconomy()
+	{
+		return VaultHook.loadEconomy();
+	}
+	
+	/**
+	 * Shortcut method that imitates a natural way of retrieving the Permissions Manager of the server.
+	 * 
+	 * @return What {@link VaultHook#loadPermission()} returns.
+	 */
+	public ServiceProvider<Permission> loadPermissions()
+	{
+		return VaultHook.loadPermission();
+	}
+	
+	/**
+	 * Shortcut method that imitates a natural way of retrieving the Chat Manager of the server.
+	 * 
+	 * @return What {@link VaultHook#loadChat()} returns.
+	 */
+	public ServiceProvider<Chat> loadChat()
+	{
+		return VaultHook.loadChat();
 	}
 }
